=======
CHANGES
=======

0.2.1 (unreleased)
------------------

- edit document hierarchy view now sorts by hierarchy order
- nodes table filter now orders layer checkboxes by hierarchy order


0.2 (2012-09-13)
----------------

- Added CourseNodes sheet to skills importer
- Made Batch Assign Skills view to associate several nodes at once
- Skills Document table views need cyclic relationship check (https://launchpad.net/bugs/1030865)
- Added Skill Sets tab back to skills tertiary


0.1 (2012-08-08)
----------------

Initial release.