@@ -7,6 +7,7 @@ CHANGES
 
 - edit document hierarchy view now sorts by hierarchy order
 - nodes table filter now orders layer checkboxes by hierarchy order
+- I can't set a node label through the web (https://launchpad.net/bugs/1049442)
 
 
 0.2 (2012-09-13)
